--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -14,8 +14,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\Debug"
-			IntermediateDirectory=".\Debug"
+			OutputDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE"
@@ -52,12 +52,12 @@
 				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile=".\Debug/VE_Xplorer.pdb"
+				ProgramDatabaseFile="$(ConfigurationName)/VE_Xplorer.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
-				TypeLibraryName=".\Debug/VE_Xplorer.tlb"
+				TypeLibraryName="$(ConfigurationName)/VE_Xplorer.tlb"
 				HeaderFileName=""/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
@@ -376,12 +376,12 @@
 				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile=".\Debug/VE_Xplorer.pdb"
+				ProgramDatabaseFile="$(ConfigurationName)/VE_Xplorer.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
-				TypeLibraryName=".\Debug/VE_Xplorer.tlb"
+				TypeLibraryName="$(ConfigurationName)/VE_Xplorer.tlb"
 				HeaderFileName=""/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
@@ -804,9 +804,6 @@
 			</File>
 			<File
 				RelativePath=".\cfdObjects.cxx">
-			</File>
-			<File
-				RelativePath=".\cfdOSGOrientationConverter.cxx">
 			</File>
 			<File
 				RelativePath="..\VE_SceneGraph\cfdPfSceneManagement.cxx">
@@ -1447,9 +1444,6 @@
 			</File>
 			<File
 				RelativePath="cfdObjects.h">
-			</File>
-			<File
-				RelativePath=".\cfdOSGOrientationConverter.h">
 			</File>
 			<File
 				RelativePath="..\VE_SceneGraph\cfdPfSceneManagement.h">
