--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -205,6 +205,7 @@ SRCS+= \
    cfdTextureMatrixCallback.cxx \
    cfdTextureManager.cxx \
    cfdUpdateTextureCallback.cpp \
+   cfdVolumeCenterCallback.cxx \
    cfdVolumeVisualization.cpp 
 endif
 endif
