renaming this to something that makes more sense updated the Makefile to reflect this as well

--- a/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
@@ -1,5 +1,5 @@
 # Create the OS-dependent directory name
-APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/advectionTexturePreprocessor
+APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/vtkTo3DTexture
 
 all:
 	$(MAKE) NO_DEPEND=0 cxx
