--- a/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(WX_WIDGETS_HOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk&quot;"
+				AdditionalIncludeDirectories="&quot;$(WX_WIDGETS_HOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(WX_WIDGETS_HOME)\lib\vc_dll\mswd&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -33,10 +33,10 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wxmsw24d.lib  vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib"
+				AdditionalDependencies="wxbase26d.lib wxmsw26d_core.lib vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib"
 				OutputFile="$(OutDir)/tcGUI.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(WX_WIDGETS_HOME)\lib\&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;"
+				AdditionalLibraryDirectories="&quot;$(WX_WIDGETS_HOME)\lib\vc_dll&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/tcGUI.pdb"
 				SubSystem="2"
