--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -228,7 +228,7 @@ echo Done.
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\msw&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\futuregen\VE_UI&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Utilities\gui&quot;"
+				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswdlld&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\futuregen\VE_UI&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Utilities\gui&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CONSOLE;__WIN32__;__x86__;__NT__;__OSVERSION__=4;_WIN32;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -392,7 +392,7 @@ echo Done.
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\msw&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Utilities\gui&quot;"
+				AdditionalIncludeDirectories="./;&quot;$(OMNI_HOME)\include&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Utilities\gui&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CONSOLE;__WIN32__;__x86__;__NT__;__OSVERSION__=4;_WIN32;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400;VE_PATENTED;CFD_USE_SHADERS"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -406,10 +406,10 @@ echo Done.
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wxmsw24d.lib omniORB405_rtd.lib omnithread30_rtd.lib omniDynamic405_rtd.lib"
+				AdditionalDependencies="wxbase26d.lib wxmsw26d_core.lib omniORB405_rtd.lib omnithread30_rtd.lib omniDynamic405_rtd.lib"
 				OutputFile="$(VE_SUITE_HOME)/bin/win32/VE_Conductor.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(WX_HOME)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/VE_Conductor.pdb"
 				SubSystem="2"
