preliminary working version of the gauge

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -145,6 +145,7 @@ SRCS=\
    cfdCuttingPlane.cxx \
    cfdDCS.cxx \
    cfdDataSet.cxx \
+   cfdDigitalAnalogGauge.cxx \
    cfdEnvironmentHandler.cxx \
    cfdFILE.cxx \
    cfdFileInfo.cxx \
