fixes to build win32 wx2.6.0 version of xplorer

--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -367,7 +367,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vpr_d.lib vrj_d.lib vrj_pf_d.lib libnspr4.lib jccl_d.lib tweek_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libpf.lib libpfv.lib libpfdu-util.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib xerces-c_2D.lib wxmsw24d.lib"
+				AdditionalDependencies="vpr_d.lib vrj_d.lib vrj_pf_d.lib libnspr4.lib jccl_d.lib tweek_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libpf.lib libpfv.lib libpfdu-util.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib xerces-c_2D.lib wxmsw250d.lib"
 				ShowProgress="0"
 				OutputFile="$(VE_SUITE_HOME)\bin\win32\project_taod.exe"
 				LinkIncremental="2"
@@ -1622,7 +1622,8 @@
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 						</FileConfiguration>
 						<FileConfiguration
-							Name="Debug_TAO|Win32">
+							Name="Debug_TAO|Win32"
+							ExcludedFromBuild="TRUE">
 							<Tool
 								Name="VCCLCompilerTool"
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -1685,7 +1686,8 @@
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 						</FileConfiguration>
 						<FileConfiguration
-							Name="Debug_TAO|Win32">
+							Name="Debug_TAO|Win32"
+							ExcludedFromBuild="TRUE">
 							<Tool
 								Name="VCCLCompilerTool"
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -1748,7 +1750,8 @@
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 						</FileConfiguration>
 						<FileConfiguration
-							Name="Debug_TAO|Win32">
+							Name="Debug_TAO|Win32"
+							ExcludedFromBuild="TRUE">
 							<Tool
 								Name="VCCLCompilerTool"
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -1811,7 +1814,8 @@
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 						</FileConfiguration>
 						<FileConfiguration
-							Name="Debug_TAO|Win32">
+							Name="Debug_TAO|Win32"
+							ExcludedFromBuild="TRUE">
 							<Tool
 								Name="VCCLCompilerTool"
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -1843,6 +1847,12 @@
 					</File>
 					<File
 						RelativePath="..\VE_VolumeVis\cfdVolumeCenterCallback.cxx">
+						<FileConfiguration
+							Name="Debug_TAO|Win32"
+							ExcludedFromBuild="TRUE">
+							<Tool
+								Name="VCCLCompilerTool"/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\VE_VolumeVis\cfdVolumeVisualization.cxx">
@@ -1877,7 +1887,8 @@
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 						</FileConfiguration>
 						<FileConfiguration
-							Name="Debug_TAO|Win32">
+							Name="Debug_TAO|Win32"
+							ExcludedFromBuild="TRUE">
 							<Tool
 								Name="VCCLCompilerTool"
 								ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -1973,7 +1984,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2036,7 +2048,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2099,7 +2112,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2131,6 +2145,12 @@
 						</File>
 						<File
 							RelativePath="..\VE_VolumeVis\cfdScalarShaderManager.cxx">
+							<FileConfiguration
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
+								<Tool
+									Name="VCCLCompilerTool"/>
+							</FileConfiguration>
 						</File>
 					</Filter>
 					<Filter
@@ -2189,7 +2209,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2252,7 +2273,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2315,7 +2337,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2399,7 +2422,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2462,7 +2486,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2525,7 +2550,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2588,7 +2614,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2651,7 +2678,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2714,7 +2742,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2746,6 +2775,12 @@
 						</File>
 						<File
 							RelativePath="..\VE_VolumeVis\cfdSimpleTextureCallback.cxx">
+							<FileConfiguration
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
+								<Tool
+									Name="VCCLCompilerTool"/>
+							</FileConfiguration>
 						</File>
 						<File
 							RelativePath="..\VE_VolumeVis\cfdUpdateableOSGNoiseTexture3d.cxx">
@@ -2780,7 +2815,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2843,7 +2879,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2906,7 +2943,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -2969,7 +3007,8 @@
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 							</FileConfiguration>
 							<FileConfiguration
-								Name="Debug_TAO|Win32">
+								Name="Debug_TAO|Win32"
+								ExcludedFromBuild="TRUE">
 								<Tool
 									Name="VCCLCompilerTool"
 									ObjectFile="$(IntDir)/$(InputName)1.obj"/>
