--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -172,7 +172,7 @@ echo Done.
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Utilities\gui&quot;"
+				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswdlld&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Utilities\gui&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_TAO;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -189,7 +189,7 @@ echo Done.
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxmsw24d.lib"
+				AdditionalDependencies="aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxmsw250d.lib"
 				OutputFile="$(VE_SUITE_HOME)/bin/win32/VE_Conductor_taod.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
