overriding billboard to begin debugging. . .not fixed but I wanted to check in so I could work on it at the labs

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -206,6 +206,7 @@ SRCS+= \
    cfdTextureMatrixCallback.cxx \
    cfdTextureManager.cxx \
    cfdUpdateTextureCallback.cpp \
+   cfdVolumeBillboard.cxx \
    cfdVolumeCenterCallback.cxx \
    cfdVolumeVisualization.cpp 
 endif
